fix overrides modal overflow

--- a/grafana-plugin/src/containers/RotationForm/RotationForm.module.css
+++ b/grafana-plugin/src/containers/RotationForm/RotationForm.module.css
@@ -93,4 +93,5 @@
 
 .updated-shift-info {
   margin-bottom: 10px;
+  width: 100%;
 }
